1.0.1
-----



1.0.0
-----

* Proper error messages when a search fails. (#600)
* Upgrade to Django 1.4.1 security release.
* Wrote new user documentation at pandaproject.net.
* Remove nginx file size upload limitation. (#832)
* Stale data in Solr indexes will no longer break search. (#793)
* Add form for adding users in bulk to admin. (#762)
* Fix broken Change Password and Logout buttons on admin pages. (#795)
* Implement global search results export. (#788)
* Increase uWSGI buffer size to prevent overflows. (#792)
* Fix emails so they can be longer than 30 characters. (#789)
* Add "Related Links" section to dataset pages. (#763)
* Make progress bars degrade gracefully in IE. (#426)
* Ensure new pages always begin scrolled to the top. (#790)
* Fix broken export links in notifications. (#783)
* Fix so that hitting enter in modal dialogs submits the form. (#781)
* Add descriptions for data and related uploads. (#757)
* Fix major bug in IE8 with handling encoding errors. (#688)
* Upgrade all deployments to Ubuntu 12.04 LTS release. (#684)
* User login cookies now last 30 days. (#639)
* Reword "Column filters" to be easier to understand. (#591)
* Major performance improvements for user pages. (#778)
* Automatically match nicknames in search. (#761)
* Search for data within dataset categories. (#760)
* Add links to data exports to user pages. (#759)
* Implement "Text" column filter. (#758)
* Make modal dialogs focus first form field on open. (#674)
* Fix display of notifications in navbar. (#749)
* Datasets are no longer locked for editing during exports. (#659)
* PANDA instances now have unique SECRET_KEYS for added security. (#465)
* A password confirmation is now required to edit a user profile. (#677)
* Datasets with aborted imports no longer appear broken. (#705)
* Add refresh page link to dataset import status alerts. (#738)
* Fix search subscription text when not using any full-text query (#747)