@@ -1,7 +1,10 @@
 1.0.1
 -----
 
-
+* Fix for searching categories with many datasets. (#849)
+* Fixed broken cross-dataset export link. (#848)
+* Fixed broken export links in email. (#847)
+* Added version number to admin and dashboard. (#845)
 
 1.0.0
 -----
